# gd-posix-apps

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  escaped-input.msg
.github/workflows/: build-and-test.yml  codeql-analysis.yml
cmake/: FindClangFormat.cmake  FindClangTidy.cmake  GDPosixAppsTests.cmake  Warnings.cmake  clang-format-check.py
docs/: build-and-test.md  copyright-and-licensing.md  i18n.md  index.md
docs/file-formats/: compress.md  message-catalogues.md  messages-json.md
docs/libgdsup/: header-files.md  index.md  limits.md  windows-support.md
docs/utilities/: bc.md  imp-def-behaviour.md
libgdsup/: CMakeLists.txt
libgdsup/cmake/: check-filesystem.cc  check-format.cc
libgdsup/fcntl/: CMakeLists.txt  __fcntl_open.c  fcntl.h  open-win32.c
libgdsup/include/gd/: bit.hh  fcntl.h  filesystem.hh  format.hh  langinfo.h  libgen.h  limits.h  nl_types.h  signal.h  span.hh  stdlib.h  string.h  time.h  unistd.h
libgdsup/include/gd/bits/: defines.h
libgdsup/include/gd/bits/types/: blkcnt_t.h  blksize_t.h  dev_t.h  gid_t.h  ino_t.h  mode_t.h  nlink_t.h  off_t.h  pid_t.h  uid_t.h
libgdsup/include/gd/sys/: stat.h
libgdsup/langinfo/: CMakeLists.txt  nl_langinfo-win32.c
libgdsup/libgen/: CMakeLists.txt  basename.c  dirname.c  test-basename.cc  test-dirname.cc
libgdsup/nl_types/: CMakeLists.txt  __nl_types_check_cat_header.c  catclose.c  catgets.c  catopen.c  nl_types.h.in  test-__nl_types_check_cat_header.cc  test-catclose.cc  test-catopen.cc  test-config.h.in  test-setup-catopen.py
libgdsup/signal/: CMakeLists.txt  sigaction-win32.c  sigaddset-win32.c  sigdelset-win32.c  sigemptyset-win32.c  sigfillset-win32.c
libgdsup/stdlib/: CMakeLists.txt  mkstemp-win32.c  setenv-win32.c
libgdsup/string/: CMakeLists.txt  strdup-win32.c
libgdsup/support/: CMakeLists.txt  __support_log.c  __support_read_le_u32.c  __support_read_le_u64.c  empty.c  support.h  test-__support_read_le_u32.cc  test-__support_read_le_u64.cc  test-gdsup-main.cc
libgdsup/sys_stat/: CMakeLists.txt  chmod-win32.c  fstat-win32.c  test-umask.cc  umask-win32.c
libgdsup/time/: CMakeLists.txt  __support_performance_frequency-win32.c  clock_getres-win32.c  clock_gettime-win32.c  clock_settime-win32.c  time.h
libgdsup/unistd/: CMakeLists.txt  __gd_getopt_reset.c  __unistd_read.c  close-win32.c  getopt.c  isatty-win32.c  pathconf-win32.c  read-win32.c  test-getopt.cc  unistd.h  unlink-win32.c  write-win32.c
python-lib/: generate-messages.py  int_tests.py
schema/: messages.schema.json
src/: CMakeLists.txt
src/ar/: CMakeLists.txt  ar-files.hh  ar-member.cc  ar.cc  ar.hh  ar.messages.json  int-test-ar.py  test-libar-main.cc  test-member-header.cc
src/ar/test-data/: input1.txt  input2.txt
src/asa/: CMakeLists.txt  asa.cc  asa.messages.json  int-test-asa.py
src/asa/test-data/: input1.txt  input2.txt  output1.txt  output12.txt  output2.txt
src/awk/: CMakeLists.txt  awk.cc  awk.hh  awk.messages.json  execute.cc  instruction.cc  int-test-awk.py  lexer.cc  parsed-program.cc  parser.cc  reader.cc  test-lexer.cc  test-libawk-main.cc  test-reader.cc  token.cc
src/awk/test-data/: .editorconfig
src/basename/: CMakeLists.txt  basename.cc  basename.messages.json  int-test-basename.py
src/bc/: CMakeLists.txt  bc.cc  bc.hh  bc.messages.json  find-multiply-split-point.cc  instruction.cc  lexer.cc  number.hh  parser.cc  reader.cc  test-lexer.cc  test-libbc-main.cc  test-number.cc  test-parser.cc  test-reader.cc  token.cc  vm.cc
src/bc/scripts/: add-bench.bc  bench-bc.py  mul-bench.bc  results.txt
src/cat/: CMakeLists.txt  cat.cc  cat.messages.json  int-test-cat.py
src/cat/test-data/: jabberwocky.txt
src/cc/: CMakeLists.txt  cc.cc  cc.messages.json  int-test-c99.py
src/cc/libcpp/: CMakeLists.txt  error.cc  file-store.cc  file-tokenizer.cc  identifier-manager.cc  ppnumber-manager.cc  string-literal-manager.cc  test-file-store.cc  test-identifier-manager.cc  test-libcpp-main.cc  test-location.cc  test-newline-chewer.cc  test-preprocessor-tokenizer.cc  test-trigraph-parser.cc  token.cc  trigraph-parser.cc
src/cc/libcpp/include/: character-classifiers.hh  error.hh  file-store.hh  id-map.hh  identifier-manager.hh  location.hh  ppnumber-manager.hh  preprocessor-tokenizer.hh  simple-tokenizers.hh  string-literal-manager.hh  token.hh  tokenizer.hh  tokenizers.hh
src/cc/test-data/: .editorconfig  5_2_1_1-trigraph-sequences.c  5_2_1_1-trigraph-sequences.expected  6_4_9-comments.c  6_4_9-comments.expected  simple-test.c
src/cksum/: CMakeLists.txt  cksum.cc  cksum.messages.json  gen-cksum-table.cc  int-test-cksum.py
src/cksum/test-data/: test-input1.txt  test-input2.txt
src/compress-uncompress-zcat/: CMakeLists.txt  compress.cc  compress.messages.json  int-test-compress.py
src/compress-uncompress-zcat/test-data/: .gitattributes  gen-uncompressible.py  repeated.bin.9.Z  uncompressible.bin.16.Z
src/dirname/: CMakeLists.txt  dirname.cc  dirname.messages.json  int-test-dirname.py
src/echo/: CMakeLists.txt  echo.cc  echo.messages.json  int-test-echo.py
src/expr/: CMakeLists.txt  expr.cc  expr.messages.json  int-test-expr.py
src/gencat/: CMakeLists.txt  gencat.cc  gencat.messages.json  int-test-gencat.py
src/gencat/test-data/: basic-input.cat  basic-input.msg  escaped-input.cat  escaped-input.msg
src/include/util/: cmdline.hh  file.hh  messages.hh  utils.hh
src/printf/: CMakeLists.txt  int-test-printf.py  printf.cc  printf.messages.json
src/true-false/: CMakeLists.txt  int-test-false.py  int-test-true.py  true-false.c
src/util/: CMakeLists.txt  cmdline.cc  confirm-action.cc  make-stdin-binary.cc  make-stdout-binary.cc  mkstemp.cc  program-name.cc  rename.cc  test-for-each-file.cc  test-program-name.cc  test-read-write-endian.cc  test-util-main.cc  unlink.cc  util-internals.hh  util.messages.json
src/util/input-file/: input-file-constructor.cc  input-file-getc.cc  input-file-getline.cc  input-file-queries.cc  input-file-report-error.cc  input-file-setbuf.cc
src/util/tests/: .clang-tidy  test-for-each-file.cc  test-read-write-endian.cc
